feat: export combined concept obj
